--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Thankyou Arjun</title>
+    <title>Creating 2025</title>
 </head>
 <body>
 Hello
